# writers-factory-core

./: .env.template  .gitignore  ADDING_NEW_SKILLS.md  AGENT_CONFIGURATION_SUMMARY.md  API_REFERENCE.md  BUG_SQUASHING_SESSION.md  CHANGELOG.md  CLOUD_AGENT_HANDOFF_SPRINT_7R.md  CLOUD_AGENT_QUICK_START.md  CLOUD_AGENT_SPRINT_10_REVIEW.md  CLOUD_AGENT_SPRINT_1_2.md  CLOUD_AGENT_SPRINT_1_2_REVIEW.md  CLOUD_AGENT_SPRINT_3_REVIEW.md  CLOUD_AGENT_SPRINT_3_TASKS.md  CLOUD_AGENT_SPRINT_4_REVIEW.md  CLOUD_AGENT_SPRINT_4_TASKS.md  CLOUD_AGENT_SPRINT_5_REVIEW.md  CLOUD_AGENT_SPRINT_5_TASKS.md  CLOUD_AGENT_SPRINT_6_REVIEW.md  CLOUD_AGENT_SPRINT_6_TASKS.md  CLOUD_AGENT_SPRINT_7_REVISION_TIPTAP.md  CLOUD_AGENT_SPRINT_7_TASKS.md  CLOUD_AGENT_SPRINT_8_TASKS.md  CLOUD_AGENT_TASKS.md  CODE_OF_CONDUCT.md  COMPLETE_INVENTORY.md  COMPREHENSIVE_BUG_HUNT.md  COMPREHENSIVE_BUG_HUNT_RESULTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  CORRECTED_PROMPT_FOR_CLOUD_AGENT.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_PLAN_JANUARY_COURSE.md  EDITOR_DECISION_TIPTAP.md  ENVIRONMENT_SETUP_COMPLETE.md  FINAL_BUG_HUNT_SUMMARY.md  HANDOFF.md  HANDOFF_TO_CLOUD_AGENT.md  HANDOFF_TO_CLOUD_AGENT_SPRINT_4.md  HANDOFF_TO_CLOUD_AGENT_SPRINT_6.md  (+67 more)
.claude/: mcp.json
docs/: ADDING_AGENTS.md  API_REFERENCE.md  ARCHITECTURAL_DECISION_BEGINNER_MODE.md  ARCHITECTURE.md  CREATING_WORKFLOWS.md  Complete Overview of the Notion's Writers Desktop Setup.md  DATA_ARCHITECTURE_ANALYSIS.md  KNOWLEDGE_SYSTEMS_ARCHITECTURE.md  NOTEBOOKLM_CURRENT_STATE.md  NOTEBOOKLM_MCP_COMPARISON.md  QUICKSTART.md  UX_DESIGN_SPECIFICATION.md  WRITERS_FACTORY_FIELD_GUIDE.md  setup-wizard-guide.md
docs/tasks/: INITIAL_PROMPT_FOR_CLOUD_AGENT.txt  PACKAGE_SUMMARY.md  (+15 more)
examples/: multi_model_comparison.py  project_setup.py  simple_generation.py
scripts/: import_explants.py
tests/: test_agents.py  test_file_based_storage.py  test_knowledge_router.py  test_manuscript_importer.py  test_manuscript_structure.py  test_model_comparison.py  test_scene_workflows.py  test_session_storage.py  test_sprint_14_e2e.py  test_tui.py  test_wizard.py  test_workflow_engine.py  test_workflows.py
webapp/: FIXED_NOW_TRY_THIS.md  QUICK_START.md  README.md  launch.py  test_webapp.py
(+127 files in other folders)
